# python-template-repo

./: .cz.toml  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.rst  index.html  pyproject.toml
doc/source/: doc1.rst
docs/: index.html
docs/source/: conf.py  index.rst
docs/source/_autosummary/: module_1.rst
docs/source/_static/: custom.css
python-template-repo/: __init__.py
python-template-repo/module_1/: __init__.py
python-template-repo/module_2/: __init__.py  file_1.py  file_2.py
tests/: test_python_template_repo.py
