[tool.poetry]
name = "py-template-poetry"
version = "0.1.0"
description = ""
authors = ["de MONTALIVET Etienne <etienne.massonbachassondemontalivet@cea.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.13.4"
pre-commit = "^2.17.0"
black = "^22.3.0"
isort = "^5.10.1"
commitizen = "^2.23.0"
numpy = "^1.22.3"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-copybutton = "^0.5.0"
numpydoc = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
